--- a/OTHistogram/en.lproj/MainMenu.xib
+++ b/OTHistogram/en.lproj/MainMenu.xib
@@ -1375,7 +1375,7 @@
 							<string key="NSFrame">{{87, 41}, {74, 32}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="139620349"/>
+							<reference key="NSNextKeyView" ref="449292242"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="545979587">
@@ -1403,7 +1403,7 @@
 							<string key="NSFrame">{{87, 73}, {74, 32}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="449292242"/>
+							<reference key="NSNextKeyView" ref="511320593"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="895006075">
@@ -1435,7 +1435,7 @@
 							<string key="NSFrame">{{376, 50}, {320, 240}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="745103972"/>
+							<reference key="NSNextKeyView" ref="800783547"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSImageCell" key="NSCell" id="293659383">
@@ -1513,7 +1513,7 @@
 							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="621495472"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
-							<string key="NSClassName">NSView</string>
+							<string key="NSClassName">HistogramLayerDrawing</string>
 						</object>
 						<object class="NSPopUpButton" id="328125009">
 							<reference key="NSNextResponder" ref="439893737"/>
@@ -1604,7 +1604,7 @@
 							<string key="NSFrame">{{167, 41}, {106, 32}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="970196767"/>
+							<reference key="NSNextKeyView" ref="139620349"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="67893947">
@@ -1671,22 +1671,22 @@
 								<int key="NSPeriodicInterval">25</int>
 							</object>
 						</object>
-						<object class="NSButton" id="745103972">
+						<object class="NSButton" id="511320593">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{167, 73}, {139, 32}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="800783547"/>
+							<reference key="NSNextKeyView" ref="970196767"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
-							<object class="NSButtonCell" key="NSCell" id="880696669">
+							<object class="NSButtonCell" key="NSCell" id="241610934">
 								<int key="NSCellFlags">67108864</int>
 								<int key="NSCellFlags2">134217728</int>
 								<string key="NSContents">Histogram Data</string>
 								<reference key="NSSupport" ref="71680708"/>
 								<string key="NSCellIdentifier">_NS:9</string>
-								<reference key="NSControlView" ref="745103972"/>
+								<reference key="NSControlView" ref="511320593"/>
 								<int key="NSButtonFlags">-2038284288</int>
 								<int key="NSButtonFlags2">129</int>
 								<string key="NSAlternateContents"/>
@@ -2478,9 +2478,17 @@
 					<object class="IBActionConnection" key="connection">
 						<string key="label">readHistogramData:</string>
 						<reference key="source" ref="976324537"/>
-						<reference key="destination" ref="745103972"/>
+						<reference key="destination" ref="511320593"/>
 					</object>
 					<int key="connectionID">762</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">histogramLayer</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="551364262"/>
+					</object>
+					<int key="connectionID">763</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -3019,7 +3027,7 @@
 							<reference ref="1052241458"/>
 							<reference ref="800783547"/>
 							<reference ref="449292242"/>
-							<reference ref="745103972"/>
+							<reference ref="511320593"/>
 						</array>
 						<reference key="parent" ref="972006081"/>
 					</object>
@@ -3680,16 +3688,16 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">757</int>
-						<reference key="object" ref="745103972"/>
+						<reference key="object" ref="511320593"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="880696669"/>
+							<reference ref="241610934"/>
 						</array>
 						<reference key="parent" ref="439893737"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">758</int>
-						<reference key="object" ref="880696669"/>
-						<reference key="parent" ref="745103972"/>
+						<reference key="object" ref="241610934"/>
+						<reference key="parent" ref="511320593"/>
 					</object>
 				</array>
 			</object>
@@ -3883,7 +3891,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">762</int>
+			<int key="maxID">763</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -3998,6 +4006,7 @@
 						<string key="directionMatrix">NSMatrix</string>
 						<string key="dstImage">NSImageView</string>
 						<string key="graphicMatrix">NSMatrix</string>
+						<string key="histogramLayer">HistogramLayerDrawing</string>
 						<string key="modePopUpButton">NSPopUpButton</string>
 						<string key="movePopUpButton">NSPopUpButton</string>
 						<string key="oriImage">NSImageView</string>
@@ -4027,6 +4036,10 @@
 						<object class="IBToOneOutletInfo" key="graphicMatrix">
 							<string key="name">graphicMatrix</string>
 							<string key="candidateClassName">NSMatrix</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="histogramLayer">
+							<string key="name">histogramLayer</string>
+							<string key="candidateClassName">HistogramLayerDrawing</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="modePopUpButton">
 							<string key="name">modePopUpButton</string>
@@ -4096,6 +4109,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/AppDelegate.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">HistogramLayerDrawing</string>
+					<string key="superclassName">NSView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/HistogramLayerDrawing.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
